Updated some of the methods and code formatting to be more in-line with standards.